moved pages to react.  Need to set up auth functionality from new front end

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Node-Auth-Boilerplate</title>
+    <link 
+      rel="stylesheet" 
+      href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"
+    > <!-- load bootstrap css --> 
+      <link 
+        rel="stylesheet" 
+        href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
+      > <!-- load fontawesome -->
   </head>
   <body>
     <noscript>
