updated some layout on auth page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,11 +22,11 @@
     <title>Node-Auth-Boilerplate</title>
     <link 
       rel="stylesheet" 
-      href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css"
     > <!-- load bootstrap css --> 
       <link 
         rel="stylesheet" 
-        href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
+        href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       > <!-- load fontawesome -->
   </head>
   <body>
